--- a/ROBOT_GUI/pom.xml
+++ b/ROBOT_GUI/pom.xml
@@ -14,4 +14,21 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scream3r</groupId>
+            <artifactId>jssc</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId></groupId>
+            <artifactId>Jackson</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
