--- a/ROBOT_GUI/pom.xml
+++ b/ROBOT_GUI/pom.xml
@@ -26,8 +26,9 @@
             <version>2.8.0</version>
         </dependency>
         <dependency>
-            <groupId></groupId>
-            <artifactId>Jackson</artifactId>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
         </dependency>
     </dependencies>
 
